# garmin-connect-mcp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
src/garmin_connect_mcp/: __init__.py  auth.py  cache.py  cli.py  client.py  config.py  formatters.py  middleware.py  pagination.py  response_builder.py  server.py  time_utils.py  types.py
src/garmin_connect_mcp/scripts/: setup_auth.py
src/garmin_connect_mcp/tools/: __init__.py  activities.py  analysis.py  challenges.py  data_management.py  devices.py  gear.py  health_wellness.py  training.py  user_profile.py  weight.py  womens_health.py  workouts.py
tests/: __init__.py  conftest.py  test_formatters.py  test_pagination.py  test_response_builder.py  test_response_size.py
